Set up the Database connection and organized the files a bit

--- a/AutumnBlazorApp/Components/Account/Shared/ManageNavMenu.razor
+++ b/AutumnBlazorApp/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using AutumnBlazorApp.Data
+@using AutumnBlazorApp.Domain
 
 @inject SignInManager<ApplicationUser> SignInManager
 
