--- a/AutumnBlazorApp/Components/Account/Pages/ExternalLogin.razor
+++ b/AutumnBlazorApp/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using AutumnBlazorApp.Data
+@using AutumnBlazorApp.Domain
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
