--- a/AutumnBlazorApp/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/AutumnBlazorApp/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -5,7 +5,7 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
-@using AutumnBlazorApp.Data
+@using AutumnBlazorApp.Domain
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
