--- a/AutumnBlazorApp/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/AutumnBlazorApp/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/GenerateRecoveryCodes"
 
 @using Microsoft.AspNetCore.Identity
-@using AutumnBlazorApp.Data
+@using AutumnBlazorApp.Domain
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
