--- a/AutumnBlazorApp/Components/Account/Pages/Register.razor
+++ b/AutumnBlazorApp/Components/Account/Pages/Register.razor
@@ -5,7 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using AutumnBlazorApp.Data
+@using AutumnBlazorApp.Domain
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
