--- a/AutumnBlazorApp/Components/Account/Pages/ResetPassword.razor
+++ b/AutumnBlazorApp/Components/Account/Pages/ResetPassword.razor
@@ -4,7 +4,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using AutumnBlazorApp.Data
+@using AutumnBlazorApp.Domain
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
