--- a/AutumnBlazorApp/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/AutumnBlazorApp/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using AutumnBlazorApp.Data
+@using AutumnBlazorApp.Domain
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
